# drone_project

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
beginner_tutorials/: CMakeLists.txt  CMakeLists.txt~  package.xml
drone_project/: CMakeLists.txt  manifest.xml
drone_project/launch/: controller.launch
drone_project/src/: Source1.cpp  controller.cpp  controller.cpp~  image_converter.cpp
drone_project/src/qt/: CMakeLists.txt  mainwindow.cpp~  mainwindow.ui  widget.h
launch/: controller.launch  controller.launch~
src/: Header1.h  Source1.cpp~  controller  controller.cpp  controller.cpp~  controller.py  image_converter.cpp  image_converter.cpp~  image_converter.h  image_converter.h~  image_converter_origin.cpp  mainTestController.cpp  way to install cmake 2.8.11
src/Tracking/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  OPENCV_DEBUG.props
src/qt/: CMakeLists.txt  CMakeLists.txt~  controller.cpp  controller.h  hello.cpp  image_converter.cpp  image_converter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
src/testqt/: display.cpp  display.cpp~  display.h  display.ui  displayImage.pro  main.cpp  main.cpp~  ui_display.h  widget.cpp
